fix overfloq x on mobile devices

--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,7 @@ html {
     font-family: Montserrat-Regular, sans-serif;
     color: var(--clr1);
     line-height: 1.25rem;
+    overflow-x: hidden;
 }
 
 body {
@@ -249,7 +250,8 @@ select {
     width: 100px;
     font-weight: 600;
 }
-.download a{
+
+.download a {
     text-decoration: none;
     color: inherit;
 }
